--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "start-api": "cd flask-server && venv/bin/flask run --no-debugger",
+    "start-api": "cd flask-server && venv/bin/flask run ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
